import { toMatchDiffSnapshot } from 'snapshot-diff'
import { render } from 'test-utils'
import { BTCAmount } from './BTCAmount'
expect.extend({ toMatchDiffSnapshot })

describe('BTCAmount', () => {
  const amount = 21000
  const defaultBTCAmount = <BTCAmount amount={amount} size="large" />
  it('should render correctly for large size', () => {
    const { toJSON } = render(defaultBTCAmount)
    expect(toJSON()).toMatchSnapshot()
  })
  it('should render correctly for medium size', () => {
    const { toJSON } = render(<BTCAmount amount={amount} size="medium" />)
    expect(render(defaultBTCAmount).toJSON()).toMatchDiffSnapshot(toJSON())
  })
  it('should render correctly for small size', () => {
    const { toJSON } = render(<BTCAmount amount={amount} size="small" />)
    expect(render(defaultBTCAmount).toJSON()).toMatchDiffSnapshot(toJSON())
  })
  it('should render correctly with white', () => {
    const { toJSON } = render(<BTCAmount amount={amount} size="large" white />)
    expect(render(defaultBTCAmount).toJSON()).toMatchDiffSnapshot(toJSON())
  })
  it('should render correctly when the value is 0', () => {
    const { toJSON } = render(<BTCAmount amount={0} size="large" />)
    expect(toJSON()).toMatchSnapshot()
  })
  it('should render correctly when showAmount is false', () => {
    const { toJSON } = render(<BTCAmount amount={amount} size="large" showAmount={false} />)
    expect(render(defaultBTCAmount).toJSON()).toMatchDiffSnapshot(toJSON())
  })
})
